--- a/index.html
+++ b/index.html
@@ -118,11 +118,101 @@
 							</li>
 						</ul>
 					</nav>
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+						Launch static backdrop modal
+					</button>
 				</div>
 
 			</div>
 		</main>
 		<!-- MAIN -->
+	</section>
+
+	<section id="modal">
+		<!-- Button trigger modal -->
+
+
+		<!-- Modal -->
+		<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+			aria-labelledby="staticBackdropLabel" aria-hidden="true">
+			<div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h1 class="modal-title fs-5" id="staticBackdropLabel">Detalles Producto</h1>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form class="row gy-2 gx-3 align-items-center">
+							<div class="col-md-6">
+								<div class="input-group">
+									<div class="input-group-text">Codigo Producto</div>
+									<input type="text" class="form-control" id="autoSizingInputGroup" placeholder="">
+								</div>
+							</div>
+
+							<div class="input-group">
+								<span class="input-group-text" id="basic-addon1">Nombre Producto</span>
+								<input type="text" class="form-control" placeholder="" aria-label=""
+									aria-describedby="basic-addon1">
+							</div>
+
+							<div class="col-md-6">
+								<div class="input-group">
+									<div class="input-group-text">Gamma Producto</div>
+									<select class="form-select" id="autoSizingSelect">
+										<option selected>Choose...</option>
+										<option value="1">One</option>
+										<option value="2">Two</option>
+										<option value="3">Three</option>
+									</select>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="input-group">
+									<div class="input-group-text">Precio Producto</div>
+									<input type="text" class="form-control" id="autoSizingInputGroup" placeholder="">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="input-group">
+									<div class="input-group-text">Stock</div>
+									<input type="text" class="form-control" id="autoSizingInputGroup" placeholder="">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="input-group">
+									<div class="input-group-text">Alto mm</div>
+									<input type="text" class="form-control" id="autoSizingInputGroup" placeholder="">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="input-group">
+									<div class="input-group-text">Ancho mm</div>
+									<input type="text" class="form-control" id="autoSizingInputGroup" placeholder="">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="input-group">
+									<div class="input-group-text">Espesor mm</div>
+									<input type="text" class="form-control" id="autoSizingInputGroup" placeholder="">
+								</div>
+							</div>
+
+							<div class="input-group">
+								<span class="input-group-text">Descripcion</span>
+								<textarea class="form-control" aria-label="With textarea"></textarea>
+							</div>
+
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-success">Guardar</button>
+						<button type="button" class="btn btn-danger">Eliminar</button>
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<!-- NAVBAR -->
 </body>
