--- a/login.html
+++ b/login.html
@@ -10,16 +10,16 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="style.css">
-	<script src="main.js" async></script>
-	<script src="app.js" defer type="module"></script>
+	<link rel="stylesheet" href="./css/style.css">
+	<script src="./js/main.js" async></script>
+	<script src="./js/app.js" defer type="module"></script>
 	<title>AdminSite</title>
 </head>
 
 <body class="bodylogin">
 	<!-- MAIN -->
 	<main>
-		<br>
+		<br><br>
 		<div class="container text-center">
 
 			<div class="row align-items-center">
@@ -27,7 +27,7 @@
 
 				</div>
 				<div class="col-md-auto formlogin">
-					<img src="https://st4.depositphotos.com/3284149/28233/v/450/depositphotos_282334612-stock-illustration-lawnmower-man-lawnmower-logo-design.jpgº
+					<img src="	https://st4.depositphotos.com/3284149/28233/v/450/depositphotos_282334612-stock-illustration-lawnmower-man-lawnmower-logo-design.jpgº
 					" class="img-fluid" alt="..."><br><br>
 
 					<div class="form-floating mb-3">
@@ -38,8 +38,7 @@
 						<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
 						<label for="floatingPassword">Password</label>
 					</div><br>
-					<button type="button" class="btn btn-outline-success">Success</button>
-				</div>
+					<button type="button" class="btn btn-outline-success">Success</button>				</div>
 				<div class="col">
 
 				</div>
