feat: :zap: js autorizacion

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./css/style.css">
 	<script src="./js/main.js" async></script>
-	<script src="./js/app.js" defer type="module"></script>
+	<script src="./js/auth.js" defer type="module"></script>
 	<title>AdminSite</title>
 </head>
 
@@ -38,7 +38,7 @@
 						<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
 						<label for="floatingPassword">Password</label>
 					</div><br>
-					<button type="button" class="btn btn-outline-success">Success</button>				</div>
+					<button type="button" class="btn btn-outline-success" id="loginButton">Success</button>				</div>
 				<div class="col">
 
 				</div>
