feat: :construction: create client controller
create client controller

--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
 			</ul>
 			<div class="data">
 				<div class="content-data">
-
+					<div class="container text-center">
+						<div class="row">
+							<div class="col">
+								<img src="https://images5.alphacoders.com/500/500334.jpg"
+									class="img-fluid" alt="...">
+							</div>
+						</div>
+					</div>
 				</div>
-
 			</div>
 		</main>
 		<!-- MAIN -->
