--- a/index.html
+++ b/index.html
@@ -2,64 +2,64 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="./js/main.js" defer type="module"></script>
-	<script src="./js/app.js" defer type="module"></script>
-	<script src="./js/sidebar-component.js" defer type="module"></script>
-	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./css/style.css">
-	<script src="./js/nav-component.js" defer type="module"></script>
-	<script src="./js/products.js" defer type="module"></script>
-	<title>AdminGardenStore</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./js/main.js" defer type="module"></script>
+    <script src="./js/app.js" defer type="module"></script>
+    <script src="./js/sidebar-component.js" defer type="module"></script>
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/nav-component.js" defer type="module"></script>
+    <script src="./js/products.js" defer type="module"></script>
+    <script src="./js/client.js" defer type="module"></script>
+    <title>AdminGardenStore</title>
 
 </head>
 
 <body>
 
-	<section id="sidebar">
-		<sidebar-component></sidebar-component>
-	</section>
-	<!-- SIDEBAR -->
+    <section id="sidebar">
+        <sidebar-component></sidebar-component>
+    </section>
+    <!-- SIDEBAR -->
 
-	<!-- NAVBAR -->
-	<section id="content">
-		<!-- NAVBAR -->
-		<nav-component></nav-component>
+    <!-- NAVBAR -->
+    <section id="content">
+        <!-- NAVBAR -->
+        <nav-component></nav-component>
 
-		<!-- NAVBAR -->
+        <!-- NAVBAR -->
 
-		<!-- MAIN -->
-		<main>
-			<h1 class="title">Dashboard</h1>
-			<ul class="breadcrumbs">
-				<li><a href="#">Home</a></li>
-				<li class="divider">/</li>
-				<li><a href="#" class="active">Dashboard</a></li>
-			</ul>
-			<div class="data">
-				<div class="content-data">
-					<div class="container text-center">
-						<div class="row">
-							<div class="col">
-								<img src="https://images5.alphacoders.com/500/500334.jpg"
-									class="img-fluid" alt="...">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</main>
-		<!-- MAIN -->
-	</section>
+        <!-- MAIN -->
+        <main>
+            <h1 class="title">Dashboard</h1>
+            <ul class="breadcrumbs">
+                <li><a href="#">Home</a></li>
+                <li class="divider">/</li>
+                <li><a href="#" class="active">Dashboard</a></li>
+            </ul>
+            <div class="data">
+                <div class="content-data">
+                    <div class="container text-center">
+                        <div class="row">
+                            <div class="col">
+                                <img src="https://images5.alphacoders.com/500/500334.jpg" class="img-fluid" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <!-- MAIN -->
+    </section>
 
 
-	<!-- NAVBAR -->
+    <!-- NAVBAR -->
 </body>
 
 </html>
