--- a/login.html
+++ b/login.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./css/style.css">
-	<script src="./js/main.js" async></script>
-	<script src="./js/auth.js" defer type="module"></script>
-	<title>AdminSite</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/main.js" async></script>
+    <script src="./js/auth.js" defer></script>
+    <title>AdminSite</title>
 </head>
-
 <body class="bodylogin">
-	<!-- MAIN -->
-	<main>
-		<br><br>
-		<div class="container text-center">
-
-			<div class="row align-items-center">
-				<div class="col">
-
-				</div>
-				<div class="col-md-auto formlogin">
-					<img src="	https://st4.depositphotos.com/3284149/28233/v/450/depositphotos_282334612-stock-illustration-lawnmower-man-lawnmower-logo-design.jpgº
-					" class="img-fluid" alt="..."><br><br>
-
-					<div class="form-floating mb-3">
-						<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-						<label for="floatingInput">Email address</label>
-					</div>
-					<div class="form-floating">
-						<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-						<label for="floatingPassword">Password</label>
-					</div><br>
-					<button type="button" class="btn btn-outline-success" id="loginButton">Success</button>				</div>
-				<div class="col">
-
-				</div>
-			</div>
-
-		</div>
-
-	</main>
-	<!-- MAIN -->
-	<!-- NAVBAR -->
+    <main>
+        <br><br>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col"></div>
+                <div class="col-md-auto formlogin">
+                    <img src="https://st4.depositphotos.com/3284149/28233/v/450/depositphotos_282334612-stock-illustration-lawnmower-man-lawnmower-logo-design.jpg"
+                        class="img-fluid" alt="..."><br><br>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
+                    </div><br>
+                    <button type="button" class="btn btn-outline-success" id="loginButton">Success</button>
+                </div>
+                <div class="col"></div>
+            </div>
+        </div>
+    </main>
 </body>
+
 
 </html>
