--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/main.js" defer type="module"></script>
-    <script src="./js/app.js" defer type="module"></script>
     <script src="./js/sidebar-component.js" defer type="module"></script>
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,6 +16,7 @@
     <script src="./js/nav-component.js" defer type="module"></script>
     <script src="./js/products.js" defer type="module"></script>
     <script src="./js/client.js" defer type="module"></script>
+    <script src="./js/payment.js" defer type="module"></script>
     <title>AdminGardenStore</title>
 
 </head>
