feat: :construction: Add Crud Employee
Add Crud Employee

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./js/products.js" defer type="module"></script>
     <script src="./js/client.js" defer type="module"></script>
     <script src="./js/payment.js" defer type="module"></script>
+    <script src="./js/employee.js" defer type="module"></script>
     <title>AdminGardenStore</title>
 
 </head>
