feat: :sparkles: Add CRUD Offices
Add CRUD Offices

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./js/client.js" defer type="module"></script>
     <script src="./js/payment.js" defer type="module"></script>
     <script src="./js/employee.js" defer type="module"></script>
+    <script src="./js/office.js" defer type="module"></script>
     <title>AdminGardenStore</title>
 
 </head>
