--- a/index.html
+++ b/index.html
@@ -1,67 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/main.js" defer type="module"></script>
-    <script src="./js/sidebar-component.js" defer type="module"></script>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/nav-component.js" defer type="module"></script>
-    <script src="./js/products.js" defer type="module"></script>
-    <script src="./js/client.js" defer type="module"></script>
-    <script src="./js/payment.js" defer type="module"></script>
-    <script src="./js/employee.js" defer type="module"></script>
-    <script src="./js/office.js" defer type="module"></script>
-    <title>AdminGardenStore</title>
-
+    <script src="./js/auth.js" defer></script>
+    <title>AdminSite</title>
 </head>
-
-<body>
-
-    <section id="sidebar">
-        <sidebar-component></sidebar-component>
-    </section>
-    <!-- SIDEBAR -->
-
-    <!-- NAVBAR -->
-    <section id="content">
-        <!-- NAVBAR -->
-        <nav-component></nav-component>
-
-        <!-- NAVBAR -->
-
-        <!-- MAIN -->
-        <main>
-            <h1 class="title">Dashboard</h1>
-            <ul class="breadcrumbs">
-                <li><a href="#">Home</a></li>
-                <li class="divider">/</li>
-                <li><a href="#" class="active">Dashboard</a></li>
-            </ul>
-            <div class="data">
-                <div class="content-data">
-                    <div class="container text-center">
-                        <div class="row">
-                            <div class="col">
-                                <img src="https://images5.alphacoders.com/500/500334.jpg" class="img-fluid" alt="...">
-                            </div>
-                        </div>
+<body class="bodylogin">
+    <main>
+        <br><br>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col"></div>
+                <div class="col-md-auto formlogin">
+                    <img src="https://st4.depositphotos.com/3284149/28233/v/450/depositphotos_282334612-stock-illustration-lawnmower-man-lawnmower-logo-design.jpg"
+                        class="img-fluid" alt="..."><br><br>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
                     </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
+                    </div><br>
+                    <button type="button" class="btn btn-outline-success" id="loginButton">Success</button>
                 </div>
+                <div class="col"></div>
             </div>
-        </main>
-        <!-- MAIN -->
-    </section>
-
-
-    <!-- NAVBAR -->
+        </div>
+    </main>
 </body>
+
 
 </html>
