feat: :construction: order

--- a/main.html
+++ b/main.html
@@ -19,6 +19,7 @@
     <script src="./js/payment.js" defer type="module"></script>
     <script src="./js/employee.js" defer type="module"></script>
     <script src="./js/office.js" defer type="module"></script>
+    <script src="./js/order.js" defer type="module"></script>
     <title>AdminGardenStore</title>
 
 </head>
