feat: :white_check_mark: pagination
pagination

--- a/main.html
+++ b/main.html
@@ -59,9 +59,13 @@
                 </div>
             </div>
         </main>
+        <footer class="blockquote-footer text-end">Developers 
+            <cite title="Source Title">  Sebastian Vergara Velasquez  -  Fabian Augusto Rodriguez Rojas  -  Natalia Giraldo Gamarra </cite>
+        </footer>
+
+        </footer>
         <!-- MAIN -->
     </section>
-
 
     <!-- NAVBAR -->
 </body>
